--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">手机影音</string>
+    <string name="app_name">浮滄影音</string>
+    <string name="player_name">浮滄影音(系统推荐)</string>
 </resources>
